# xs-notify

./: .gitignore  Cargo.toml  README.md  build.ps1  install.ps1  pack.ps1  pack_and_run.ps1  package-lock.json  package.json  svelte.config.js  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: build.ps1
.github/workflows/: create_release.yml
src/: app.html  app.pcss  config.rs  default_config.toml  main.rs  notif_handling.rs  update.rs  xsoverlay.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  update.json
src-tauri/src/: config.rs  error.rs  logs.rs  main.rs  notif_handling.rs  settings.rs  update.ps1  update.rs  xsoverlay.rs
src/lib/components/settings/: MinMaxSlider.svelte  MultiSelect.svelte  NumberInputBig.svelte  NumberInputSmall.svelte  SettingSection.svelte  Switch.svelte
src/lib/components/toaster/: Toaster.svelte  toast.svelte.ts
src/lib/types/: types.ts
src/routes/: +layout.svelte  Setting.svelte  SettingSection.svelte
src/routes/(main)/: +layout.svelte  +layout.ts  +page.svelte  AboutSection.svelte
src/routes/(main)/console/: +page.svelte  +page.ts
src/routes/(main)/settings/: +page.svelte  +page.ts  Setting.svelte  SettingSection.svelte
src/routes/(update)/: +layout.svelte
src/routes/(update)/update/: +page.svelte
windows-packaging/: AppxManifest.xml  AppxManifest_externalLocation.xml
