[package]
name = "xs-notify"
version = "1.1.5"
description = "Sends all windows notifications to XSOverlay"
authors = ["Erika Gozar", "blusk", "Zelaf", "Jakob"]
repository = "https://github.com/Erallie/xs-notify"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bytes = "1.9"
chrono = "0.4"
log = "0.4"
regex = "1"
reqwest = { version = "0.12.12", features = ["json"] }
semver = "1.0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
thiserror = "2.0.11"
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = "0.1.11"
unicode-segmentation = "1.9"
webbrowser = "1"
windows = { version = "0.43.0", features = [
  "UI_Notifications_Management",
  "Foundation_Collections",
  "ApplicationModel",
  "Storage_Streams",
  "Graphics_Imaging",
] }
